# MinecraftClone

./: .gitignore  CMakeLists.txt  MinecraftClone.sln  README.md
MinecraftClone/: CMakeLists.txt  MinecraftClone.vcxproj  MinecraftClone.vcxproj.filters  imgui.ini  main.cpp
MinecraftClone/include/Blocks/: Air.h  AllBlocks.h  Block.h  Dirt.h
MinecraftClone/include/Player/: Player.h
MinecraftClone/include/gfx/: Mesh.h  RessourceManager.h  SafeMesh.h  Window.h  gfx.h
MinecraftClone/include/gfx/Arrays/: VertexArray.h
MinecraftClone/include/gfx/Buffers/: IndexBuffer.h  VertexBuffer.h
MinecraftClone/include/gfx/Debug/: Debug.h
MinecraftClone/include/gfx/Shaders/: Shader.h
MinecraftClone/include/gfx/Texture/: Texture.h
MinecraftClone/include/gfx/Vertex/: Vertex.h
MinecraftClone/include/terrain/: Chunk.h  ChunkMap.h  ChunkMesh.h  World.h  WorldGenerator.h  hashGlmIvec3.h
MinecraftClone/include/util/: Camera.h  Clock.h  Log.h  Raycast.h
MinecraftClone/lib/glm/detail/: glm.cpp
MinecraftClone/res/shaders/: default.frag  default.vert
MinecraftClone/src/Blocks/: Block.cpp
MinecraftClone/src/Player/: Player.cpp
MinecraftClone/src/gfx/: Mesh.cpp  RessourceManager.cpp  SafeMesh.cpp  Window.cpp
MinecraftClone/src/gfx/Arrays/: VertexArray.cpp
MinecraftClone/src/gfx/Buffers/: IndexBuffer.cpp  VertexBuffer.cpp
MinecraftClone/src/gfx/Shaders/: Shader.cpp
MinecraftClone/src/gfx/Texture/: Texture.cpp
MinecraftClone/src/terrain/: Chunk.cpp  ChunkMap.cpp  ChunkMesh.cpp  World.cpp  WorldGenerator.cpp
MinecraftClone/src/util/: Camera.cpp  Log.cpp  Raycast.cpp
